; ModuleID = '/home/carl/AnghaBench/git/extr_sequencer.c_template_untouched.c'
source_filename = "/home/carl/AnghaBench/git/extr_sequencer.c_template_untouched.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i8*, i64 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 8
@COMMIT_MSG_CLEANUP_NONE = common dso_local global i32 0, align 4
@COMMIT_MSG_CLEANUP_ALL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @template_untouched(%struct.strbuf* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.strbuf*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.strbuf, align 8
  %9 = alloca i8*, align 8
  store %struct.strbuf* %0, %struct.strbuf** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = bitcast %struct.strbuf* %8 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %10, i8* align 8 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 16, i1 false)
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* @COMMIT_MSG_CLEANUP_NONE, align 4
  %13 = icmp eq i32 %11, %12
  br i1 %13, label %14, label %20

14:                                               ; preds = %3
  %15 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %16 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %14
  store i32 0, i32* %4, align 4
  br label %57

20:                                               ; preds = %14, %3
  %21 = load i8*, i8** %6, align 8
  %22 = icmp ne i8* %21, null
  br i1 %22, label %23, label %27

23:                                               ; preds = %20
  %24 = load i8*, i8** %6, align 8
  %25 = call i64 @strbuf_read_file(%struct.strbuf* %8, i8* %24, i32 0)
  %26 = icmp sle i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %23, %20
  store i32 0, i32* %4, align 4
  br label %57

28:                                               ; preds = %23
  %29 = load i32, i32* %7, align 4
  %30 = load i32, i32* @COMMIT_MSG_CLEANUP_ALL, align 4
  %31 = icmp eq i32 %29, %30
  %32 = zext i1 %31 to i32
  %33 = call i32 @strbuf_stripspace(%struct.strbuf* %8, i32 %32)
  %34 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %35 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %34, i32 0, i32 0
  %36 = load i8*, i8** %35, align 8
  %37 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %8, i32 0, i32 0
  %38 = load i8*, i8** %37, align 8
  %39 = call i32 @skip_prefix(i8* %36, i8* %38, i8** %9)
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %45, label %41

41:                                               ; preds = %28
  %42 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %43 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %42, i32 0, i32 0
  %44 = load i8*, i8** %43, align 8
  store i8* %44, i8** %9, align 8
  br label %45

45:                                               ; preds = %41, %28
  %46 = call i32 @strbuf_release(%struct.strbuf* %8)
  %47 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %48 = load i8*, i8** %9, align 8
  %49 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %50 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %49, i32 0, i32 0
  %51 = load i8*, i8** %50, align 8
  %52 = ptrtoint i8* %48 to i64
  %53 = ptrtoint i8* %51 to i64
  %54 = sub i64 %52, %53
  %55 = trunc i64 %54 to i32
  %56 = call i32 @rest_is_empty(%struct.strbuf* %47, i32 %55)
  store i32 %56, i32* %4, align 4
  br label %57

57:                                               ; preds = %45, %27, %19
  %58 = load i32, i32* %4, align 4
  ret i32 %58
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @strbuf_read_file(%struct.strbuf*, i8*, i32) #2

declare dso_local i32 @strbuf_stripspace(%struct.strbuf*, i32) #2

declare dso_local i32 @skip_prefix(i8*, i8*, i8**) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2

declare dso_local i32 @rest_is_empty(%struct.strbuf*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
